--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "bin": "bin/shohan-cli",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "esm": "^3.2.25",
     "inquirer": "^7.3.3",
     "ncp": "^2.0.0",
+    "node-sass": "^6.0.0",
     "ora": "^5.2.0"
   },
   "files": [
